# omniscape

./: Cargo.toml  README.md
docs/: Queue&AlreadyChecked.md
src/: main.rs  mod.rs
src/database/: connection.rs  mod.rs  tiktok.rs  util.rs
src/http/: http.rs
src/instagram/: mod.rs
src/structs/: user.rs
src/tiktok/: constants.rs  follow.rs  mod.rs  scraper.rs
src/tui/: mod.rs  tuimain.rs
