[package]
name = "tiggtoggrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
dashmap = "5.5.3"
rayon = "1.10.0"
dotenv = "0.15.0"
reqwest = "0.12.3"
rusqlite = "0.31.0"
serde = { version="1.0.198", features=["derive"]}
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"]}
ratatui = "0.26.2"
crossterm = "0.27.0"
